[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "improvement"
version = "0.1.0"
description = "A Python pacakge for facilitating analysis using the tools of Statistical Process Control (SPC)"
authors = [{ name = "Jim Lehner", email = "James.Lehner@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "numpy", 
    "pandas", 
    "matplotlib", 
    "seaborn"
]

[tool.setuptools]
packages = ["improvement"]

[tool.pytest.ini_options]
testpaths = ["tests"]